packages/jsii/test/negatives/neg.implementation-changes-types.3.ts
export class Superclass {}
export class Subclass extends Superclass {}

export interface ISomething {
  takeSomething(argument: Superclass): void;
}

export class Something implements ISomething {
  public takeSomething(_argument: Subclass): void {
    // Nothing
  }
}
